update :  cors  for connecting to vercel .